<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".layout.LoginViewBindingFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@fraction/normal_guideline_start_point" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@fraction/normal_guideline_end_point" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_large_100"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_welcome_logo"
        app:layout_constraintBottom_toTopOf="@id/txt_layout_username"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/txt_layout_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="@dimen/space_mini_40"
        android:hint="@string/username"
        android:focusableInTouchMode="true"
        android:textSize="@dimen/txt_normal_100"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        android:paddingBottom="@dimen/space_normal_125"
        app:layout_constraintBottom_toTopOf="@id/txt_layout_password"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/txt_layout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/password"
        android:focusableInTouchMode="true"
        android:textSize="@dimen/txt_normal_100"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:layout_marginBottom="@dimen/space_normal_100"
        android:paddingBottom="@dimen/space_normal_125"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/txt_layout_username"
        android:autofillHints="password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_mini_140"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textSize="@dimen/txt_normal_100"
        android:minHeight="@dimen/space_large_200"
        app:layout_constraintBottom_toTopOf="@id/txt_view_or"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/txt_layout_password"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_view_or"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_mini_140"
        android:text="@string/or"
        android:textSize="@dimen/txt_normal_100"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btn_login_facebook"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_mini_140"
        android:stateListAnimator="@null"
        android:text="@string/connect_with_facebook"
        android:textSize="@dimen/txt_normal_100"
        android:minHeight="@dimen/space_large_200"
        app:icon="@drawable/ic_welcome_fb_login"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toTopOf="@id/txt_view_register"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/txt_view_or"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_view_register"
        android:textColorLink="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/does_not_have_account_register"
        android:textAlignment="center"
        android:textColor="@color/shadow_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/btn_login_facebook" />

</androidx.constraintlayout.widget.ConstraintLayout>